layout bug fixed and css of edit and new pages are done

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -156,9 +156,9 @@ p, a {
     background-color: #2b8000;
     color: rgb(78, 72, 72);
     border-radius: 2px;
-    font-size: 1rem;
-    width: 10rem;
-    padding: 0.6rem 0rem;
+    font-size: 0.7rem;
+    width: 7rem;
+    padding: 0.5rem 0rem 0.5rem 0rem;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -188,7 +188,7 @@ p, a {
 }
 
 .edit-form label {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 
@@ -197,6 +197,7 @@ p, a {
     border-radius: 0.5rem;
     border: solid 1px grey;
     margin-bottom:1rem;
+    margin-top: 0.5rem;
 }
 
 .edit-button-delete {
@@ -204,6 +205,8 @@ p, a {
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -4rem;
+    margin-bottom: 7rem;
     font-size: 1em;
     width: 10rem;
     padding: 0.6rem 0rem;
